bug fix: avatar image is stretched on 404

--- a/vallek-github.user.css
+++ b/vallek-github.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Github Compact
 @namespace      github.com/openstyles/stylus
-@version        2.4.1
+@version        2.4.2
 @description    Github Compact style + distinctive tabs
 @author         Vallek
 ==/UserStyle== */
@@ -37,6 +37,7 @@
     padding: 0 !important;
   }
   button[class*="prc-Button-ButtonBase"] > img[class*="prc-Avatar-Avatar"] {
+    max-width: initial !important;
     width: 26px;
     height: 26px;
   }
